--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-
+    <p>rock paper scissors</p>
+    <script src="app.js"></script>
   </body>
 </html>
