--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <p>rock paper scissors</p>
+    <p>new stuff. check location</p>
     <script src="app.js"></script>
   </body>
 </html>
